k8s/apps/nginx-test/nginx-test.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: nginx-test
        image: nginx
        ports:
        - name: web
          containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-svc
  labels:
    app: nginx-test
spec:
  selector:
    app: nginx-test
  type: ClusterIP
  ports:
  - name: http
    port: 80

---
# Ingress
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-test-ingress
  namespace: nginx-test
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.dev01.internal.minipig.org`) || Host(`nginx.minipig.org`)
      kind: Rule
      services:
        - name: nginx-test-svc
          port: 80
  tls:
    secretName: nginx-test-cert
